--- a/app/src/main/res/drawable/bachground_button_def.xml
+++ b/app/src/main/res/drawable/bachground_button_def.xml
@@ -3,7 +3,7 @@
     <item >
         <shape android:shape="rectangle">
             <corners  android:radius="15dp"/>
-            <solid android:color="@color/switch_thumb_color"></solid>
+            <solid android:color="@color/Black2"></solid>
         </shape>
     </item>
 </selector>
