--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,17 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/G_white"
+    android:background="@color/white"
     tools:context=".History_Activity">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <RelativeLayout
-            android:background="@color/G_white"
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
 
@@ -27,14 +28,13 @@
             <TextView
                 android:id="@+id/textdashboard"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:layout_height="50dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="Recent"
                 android:textColor="#6f6f6f"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
