--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/bachground_layer"
         android:gravity="center_horizontal"
         android:layout_margin="10dp"
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/bachground_layer"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            >
+
+            <TextView
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:text="Pomp power"
+                android:textColor="@color/Blue_v1"
+                android:textSize="22dp"
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:paddingStart="10dp"/>
+
+            <ToggleButton
+                android:id="@+id/btn_on_off"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
@@ -22,30 +47,7 @@
             android:layout_marginBottom="10dp"
             android:orientation="vertical"
             >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/bachground_layer"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
-                >
 
-                <TextView
-                    android:layout_width="300dp"
-                    android:layout_height="match_parent"
-                    android:text="Pomp power"
-                    android:textColor="@color/Blue_v1"
-                    android:textSize="22dp"
-                    android:gravity="center_vertical"
-                    android:textStyle="bold"
-                    android:paddingStart="10dp"/>
-
-                <ToggleButton
-                    android:id="@+id/btn_on_off"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    />
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -76,6 +78,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="250dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/bachground_linear">
             <LinearLayout
                 android:layout_width="177dp"
