--- a/app/src/main/res/layout/activity_data_enc.xml
+++ b/app/src/main/res/layout/activity_data_enc.xml
@@ -53,7 +53,8 @@
                 android:textStyle="bold"
                 android:paddingStart="10dp"
                 android:textColor="@color/Black2"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="60dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
@@ -80,7 +81,8 @@
             android:layout_height="300dp"
             android:background="@drawable/input_strock"
             android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="80dp"
+           >
 
             <TextView
                 android:id="@+id/txt_data1"
@@ -109,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/bachground_button_green"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:text="Done"
             android:textStyle="bold"
             android:textSize="25dp"/>
