--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,167 +5,289 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Black_for_hint"
+    android:background="@color/G_white"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bachground_layer"
-        android:gravity="center_horizontal"
-        android:layout_margin="10dp"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/bachground_layer"
-            android:orientation="horizontal"
-            android:layout_margin="10dp"
-            >
+        android:background="@color/G_white"
+        android:padding="10dp">
 
-            <TextView
-                android:layout_width="300dp"
-                android:layout_height="match_parent"
-                android:text="Pomp power"
-                android:textColor="@color/Blue_v1"
-                android:textSize="22dp"
-                android:gravity="center_vertical"
-                android:textStyle="bold"
-                android:paddingStart="10dp"/>
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:text="My green house"
+    android:textStyle="bold"
+    android:textSize="30dp"
+    android:textColor="@color/Black2"/>
 
-            <ToggleButton
-                android:id="@+id/btn_on_off"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@drawable/bachground_linear"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center_horizontal">
-
-                <ImageView
-                    android:id="@+id/img_weather"
-                    android:layout_width="180dp"
-                    android:layout_height="200dp"
-                    android:src="@drawable/storm"/>
-
-                <TextView
-                    android:id="@+id/txt_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:textStyle="bold"
-                    android:text="Storm today"
-                    android:textColor="@color/Black2"
-                    android:textSize="25dp"
-                    android:gravity="center"/>
-
-            </LinearLayout>
-        </LinearLayout>
-
-
-
-        <LinearLayout
+        <!-- Line 2: Temperature and Humidity Display with Shadow -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/bachground_linear">
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/white">
+
             <LinearLayout
-                android:layout_width="177dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:src="@drawable/thermometer"
-                android:layout_margin="5dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:textStyle="bold"
-                android:text="Humidity"
-                android:textSize="25dp"
-                android:textColor="@color/Blue_v2"
-                android:gravity="center"/>
-                <TextView
-                    android:id="@+id/txt_humidity"
-                    android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                android:gravity="center"
+                android:background="@drawable/bachground_button_white">
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:textStyle="bold"
-                    android:text="50%"
-                    android:textSize="35dp"
-                    android:textColor="@color/Black2"
-                    android:gravity="center"/>
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
 
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/cloudy1"
+                        android:contentDescription="Today"/>
 
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="60%"
+                        android:textColor="@color/Black2"
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:layout_marginTop="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cloudy"
+                        android:textColor="@color/Black2"
+                        android:textSize="18sp"/>
+                </LinearLayout>
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Line 2: Temperature and Humidity Display with Shadow -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card2"
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/white">
+
             <LinearLayout
-                android:layout_width="177dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
-                android:orientation="vertical"
-                android:layout_margin="10dp"
-                android:gravity="center_horizontal">
+                android:orientation="horizontal"
+                android:weightSum="2"
+                android:gravity="center"
+                android:background="@drawable/bachground_button_white">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/thermometer1"
+                        android:contentDescription="Temperature"/>
+
+                    <TextView
+                        android:id="@+id/temperatureText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="25°C"
+                        android:textColor="@color/Black2"
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:layout_marginTop="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Temperature"
+                        android:textColor="@color/Black2"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/humidity1"
+                        android:contentDescription="Humidity"/>
+
+                    <TextView
+                        android:id="@+id/humidityText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="60%"
+                        android:textColor="@color/Black2"
+                        android:textStyle="bold"
+                        android:textSize="24sp"
+                        android:layout_marginTop="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Humidity"
+                        android:textColor="@color/Black2"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Line 3: Pump Control with Shadow -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card3"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/white">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="@drawable/bachground_button_white">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="280dp"
+                        android:layout_height="match_parent"
+                        android:text="    Pump power"
+                        android:gravity="center_vertical"
+                        android:textStyle="bold"
+                        android:textColor="@color/Black2"
+                        android:textSize="22dp"/>
+
+                    <ToggleButton
+                        android:id="@+id/pumpToggle"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:background="@drawable/bachground_button_green30"/>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Line 4: Ventilator Control with Shadow -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card4"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/white">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="@drawable/bachground_button_white">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="280dp"
+                        android:layout_height="match_parent"
+                        android:text="    Ventilator power"
+                        android:gravity="center_vertical"
+                        android:textStyle="bold"
+                        android:textColor="@color/Black2"
+                        android:textSize="22dp"/>
+
+                    <ToggleButton
+                        android:id="@+id/ventilatorToggle"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/white"
+                        android:background="@drawable/bachground_button_green30"/>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <!-- Line 1: Navigation Icons with Shadow -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/white">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:weightSum="3"
+                android:background="@drawable/bachground_button_white">
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="120dp"
-                    android:src="@drawable/humidity"
-                    android:layout_margin="5dp"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:textStyle="bold"
-                    android:text="Temperature"
-                    android:textColor="@color/Blue_v2"
-                    android:textSize="25dp"
-                    android:gravity="center"/>
-                <TextView
-                    android:id="@+id/txt_temperature"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textStyle="bold"
-                    android:text="25°C"
-                    android:textSize="35dp"
-                    android:textColor="@color/Black2"
-                    android:gravity="center"/>
+                    android:id="@+id/nav_settings"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/history1"
+                    android:contentDescription="Settings"
+                    android:padding="5dp"/>
 
+                <ImageView
+                    android:id="@+id/nav_stats"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/graph"
+                    android:contentDescription="Statistics"
+                    android:padding="5dp"/>
+
+                <ImageView
+                    android:id="@+id/nav_alerts"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/logout"
+                    android:contentDescription="Alerts"
+                    android:padding="5dp"/>
             </LinearLayout>
-        </LinearLayout>
-
-
-
-
-        <Button
-            android:id="@+id/btn_history"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="My history"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:background="@drawable/bachground_button_blu"/>
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="Logout"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:background="@drawable/bachground_button_blu"
-            android:layout_marginTop="5dp"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
