v6 add graph to Tempirature_Activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="Black2">#41423f</color>
     <color name="Black_for_hint">#eff0f0</color>
     <color name="pup_backg">#f3ebfb</color>
-
+    <color name="green">#1b9e58</color>
 
 /////////////////////////////
     <color name="colorPrimary">#2E7D32</color>
