--- a/app/src/main/res/layout/activity_tempirature.xml
+++ b/app/src/main/res/layout/activity_tempirature.xml
@@ -33,7 +33,7 @@
             android:textSize="23dp"
             android:textStyle="bold"
             android:text="The graphic curve represents the temperature values during the week"
-            android:textColor="@color/Blue_v1"
+            android:textColor="@color/green"
             android:layout_marginTop="60dp"
 
             />
